# Applesauce

./: README.md  gitignore.txt  package-lock.json  package.json
src/: App.css  App.jsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  recorder.rs
src/components/: Recorder.tsx
src/lib/: tauri.js
